<resources>
    <string name="app_name">Magic Words</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="about">关于我们</string>
    <string name="register_passport2">确认密码</string>
    <string name="confirm">确认</string>
    <string name="proof">发送验证码</string>
    <string name="proveNumber">验证码</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="back">返回</string>
    <string name="login_button">登录</string>
    <string name="forget_button">忘记密码</string>
    <string name="label_grad_view_recommend">推荐</string>
    <string name="listen">听力</string>
    <string name="say">发音</string>
    <string name="read">阅读</string>
    <string name="word">单词</string>
    <string name="word_book">单词书</string>
    <string name="course">课程</string>
    <string name="activity">活动</string>
    <string name="settings">设置</string>
    <string name="notification">通知</string>
    <string name="level">等级</string>
    <string name="person_intro">个人介绍</string>
    <string name="person_intro_content">这个人很懒，什么都没有留下......</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="user_center">个人中心</string>
    <string name="title_activity_teaching">teachingActivity</string>
    <string name="translate">translate</string>
    <string name="next_passage">next passage</string>
</resources>
