<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_notifications_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_word_book"
            android:icon="@drawable/ic_menu_book_24dp"
            android:title="@string/word_book" />
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/ic_menu_course_24dp"
            android:title="@string/course" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_menu_activity_24dp"
            android:title="@string/activity" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings_24dp"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
