<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        style="@style/LinearLayoutVer"
        android:paddingTop="16dp">

        <!--username-->
        <android.support.design.widget.TextInputLayout style="@style/Text_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_register_username"
                style="@style/Text_input_edit"
                android:hint="@string/username"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!--email-->
        <android.support.design.widget.TextInputLayout style="@style/Text_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_register_email"
                style="@style/Text_input_edit"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!--password-->
        <android.support.design.widget.TextInputLayout style="@style/Text_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_register_password"
                style="@style/Text_input_edit"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16" />
        </android.support.design.widget.TextInputLayout>

        <!--password confirm-->
        <android.support.design.widget.TextInputLayout style="@style/Text_input_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_register_password_2"
                style="@style/Text_input_edit"
                android:hint="@string/register_passport2"
                android:inputType="textPassword"
                android:maxLength="16" />
        </android.support.design.widget.TextInputLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal">-->

        <!--<EditText-->
        <!--android:id="@+id/edit_register_proveNum"-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="44dp"-->
        <!--android:hint="@string/proveNumber"-->
        <!--android:maxLength="6"-->
        <!--android:padding="3dp" />-->

        <!--<Button-->
        <!--android:id="@+id/button_register_send_prov"-->
        <!--style="@style/ButtonNormal"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="5dp"-->
        <!--android:background="@drawable/shape_button_round"-->
        <!--android:text="@string/proof"-->
        <!--android:textStyle="italic|bold" />-->

        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_register_confirm"
                style="@style/ButtonNormal"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/confirm"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_register_back"
                style="@style/ButtonNormal"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/back"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/login_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/about"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>