<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:zsr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <RelativeLayout
        android:id="@+id/banner_container"
        android:layout_width="0dp"
        android:layout_height="180dp"
        zsr:layout_constraintEnd_toEndOf="parent"
        zsr:layout_constraintStart_toStartOf="parent"
        zsr:layout_constraintTop_toTopOf="parent">

        <com.zhengsr.viewpagerlib.view.BannerViewPager
            android:id="@+id/home_banner"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            zsr:banner_isloop="true"
            zsr:banner_looptime="3000"
            zsr:banner_switchtime="600" />

        <com.zhengsr.viewpagerlib.indicator.ZoomIndicator
            android:id="@+id/home_banner_zoom_indicator"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            zsr:zoom_alpha_min="0.5"
            zsr:zoom_leftmargin="10dp"
            zsr:zoom_max="1.5" />
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/home_layout_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:padding="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_container">

        <Button
            android:id="@+id/home_btn_study"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toToStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            zsr:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.GridLayout
            android:id="@+id/home_container"
            android:layout_width="match_parent"
            android:layout_height="0"
            android:layout_marginTop="8dp"
            app:rowCount="2"
            app:columnCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_btn_study">

            <Button
                android:id="@+id/home_btn_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/word"
                app:layout_row="0"
                app:layout_column="0"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1" />

            <Button
                android:id="@+id/home_btn_listen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/listen"
                app:layout_row="0"
                app:layout_column="1"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1" />

            <Button
                android:id="@+id/home_btn_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/read"
                app:layout_row="1"
                app:layout_column="0"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1" />

            <Button
                android:id="@+id/home_btn_say"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/say"
                app:layout_row="1"
                app:layout_column="1"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1" />
        </android.support.v7.widget.GridLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>